# quiz-app-python

quiz-backend/: pyproject.toml
quiz-backend/quiz_backend/: route.py  setting.py
quiz-backend/quiz_backend/controllers/: quiz_controllers.py
quiz-backend/quiz_backend/db/: db_connector.py
quiz-backend/quiz_backend/models/: admin_models.py  quiz_models.py  user_models.py
quiz-frontend/: package-lock.json  package.json
