[tool.poetry]
name = "quiz-backend"
version = "0.1.0"
description = ""
authors = ["iqrasaleem <iqrasaleem0323@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.18"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
python-jose = {extras = ["criptography"], version = "^3.3.0"}
passlib = {extras = ["dicrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
